# toybox

./: .gitignore  startcdt.sh
android/DemoRecyclerViewApp/: settings.gradle
android/DemoRecyclerViewApp/app/: build.gradle
android/DemoRecyclerViewApp/app/src/androidTest/java/com/example/demorecyclerviewapp/: ExampleInstrumentedTest.java
android/DemoRecyclerViewApp/app/src/main/: AndroidManifest.xml
android/DemoRecyclerViewApp/app/src/main/java/com/example/demorecyclerviewapp/: DataModel.java  MainActivity.java  RecyclerViewAdapter.java  RecyclerViewHolder.java
android/DemoRecyclerViewApp/app/src/main/res/layout/: activity_main.xml  recycler_view_list_item.xml
android/DemoRecyclerViewApp/app/src/main/res/values/: strings.xml
android/DemoRecyclerViewApp/app/src/test/java/com/example/demorecyclerviewapp/: ExampleUnitTest.java
android/DemoRecyclerViewApp/gradle/wrapper/: gradle-wrapper.properties
android/DemoViewPagerApp/: settings.gradle
android/DemoViewPagerApp/app/: build.gradle
android/DemoViewPagerApp/app/src/androidTest/java/com/example/demoviewpagerapp/: ExampleInstrumentedTest.java
android/DemoViewPagerApp/app/src/main/: AndroidManifest.xml
android/DemoViewPagerApp/app/src/main/java/com/example/demoviewpagerapp/: DemoViewPagerAdapter.java  FirstPage.java  MainActivity.java  SecondPage.java  VerticalViewPager.java
android/DemoViewPagerApp/app/src/main/res/layout/: activity_main.xml  first_page.xml  second_page.xml
android/DemoViewPagerApp/app/src/main/res/values/: strings.xml
android/DemoViewPagerApp/gradle/wrapper/: gradle-wrapper.properties
android/MyClock/: settings.gradle
android/MyClock/app/: build.gradle
android/MyClock/app/src/main/: AndroidManifest.xml
android/MyClock/app/src/main/res/layout/: activity_main.xml  popup_window.xml
android/MyClock/gradle/wrapper/: gradle-wrapper.properties
android/MyFragmentApplication/app/: build.gradle
android/MyFragmentApplication/app/src/main/: AndroidManifest.xml
android/MyFragmentApplication/app/src/main/res/layout/: main_fragment.xml
android/MyFragmentApplication/app/src/main/res/values/: strings.xml
android/MyFragmentApplication/gradle/wrapper/: gradle-wrapper.properties
cassandra/filestore/: .cproject  .project  CMakeLists.txt  filestore.cpp
cmprpm/: README.md  cmprpm.py
cpp/counter/: .cproject  .project  CMakeLists.txt  Makefile  counter.hpp  main.cpp
cpp/hello-opencl/: onefile.cpp
cpp/hellogrpc/: .cproject  .project  CMakeLists.txt  api.proto  hellogrpc.cpp
cpp/integer_partition/: .cproject  .project  CMakeLists.txt  integer_partition.cpp
cpp/iter/: .cproject  .project  CMakeLists.txt  iter.cpp
cpp/perf/cuckoomap/: CMakeLists.txt  Makefile  custom_alloc.cpp  notes.txt
cpp/prime/: .cproject  CMakeLists.txt  app.cpp  app.h  frame.cpp  frame.h  prime.cpp
cpp/pstat/: .cproject  .project  CMakeLists.txt  pstat.cpp
cpp/qcppcheck/: .cproject  .project  CMakeLists.txt  Makefile  qcppcheck.cpp  qcppcheck.h
cpp/rule-of-six/: .cproject  .project  CMakeLists.txt  user-ctor.cpp
cpp/savepage/: .cproject  .project  CMakeLists.txt  Makefile  moc_savepage.cpp  savepage.cpp  savepage.hpp
cpp/segv/: .cproject  .project  CMakeLists.txt  Makefile  segv.cpp
cpp/sharemmap/: .cproject  .project  CMakeLists.txt  sharemmap.cpp
cpp/sift1b/: .cproject  .project  CMakeLists.txt  f2i.cpp  imgvec.hpp
cpp/wx-vcpkg-lab/: CMakeLists.txt  wx-vcpkg-lab.cpp
cpp/wxterm/: .cproject  .project  CMakeLists.txt  Makefile  build.sh  wxterm.cpp
findduplicates/: .cproject  .project  CMakeLists.txt  Makefile  README.md  digest_thread.cpp  findduplicates.cpp  findduplicates.h  mainwnd.cpp  mainwnd.h
hellobtree/: Makefile  hellobtree.cpp
hellocassandra/: Makefile  fixheaders.sh  hellocassandra.cpp  notes.txt
helloflink/SocketWindowWordCount/: Makefile  SocketWindowWordCount.java  build.sh  manifest.txt  notes.txt  send_file.cpp  standalone.sh
helloflink/wikiedits/: build.sh  manifest.txt  pom.xml  start.sh
helloflink/wikiedits/src/main/java/wikiedits/: WikipediaAnalysis.java  WikipediaEditEvent.java  WikipediaEditEventIrcStream.java  WikipediaEditsSource.java
helloflume/: Makefile  helloflume.cpp  helloflume.properties  readme.txt  start-flume.sh
hellohadoop/: Makefile  hellohadoop.cpp  hellostreaming.cpp  notes.txt  start.sh  streaming.sh
hellohadoop/java/: MANIFEST.MF  build.sh  hellohadoop.java  notes.txt  startjob.sh
hellohbase/: .cproject  .project  CreateHBaseTable.java  Makefile  hellohbase.cpp  notes.txt  start.sh
hellohdfs/: .cproject  .project  Makefile  hellohdfs.cpp  notes.txt
hellokafka/: .cproject  .project  Makefile  hellokafka.cpp  notes.txt
hellokafka/javaclient/: build.sh  offset.json  pom.xml
hellokafka/javaclient/src/main/java/javaclient/: MainApp.java
hellokeras/: wxkeras_20newsgroups.py  wxkeras_imdb1.py  wxkeras_imdb_bi_lstm.py  wxkeras_imdb_cnn.py  wxkeras_mnist.py  wxkeras_mnist_norm.py  wxkeras_oxflower17.py
hellonlp/: doc2vec_try1.py  synonym.py
hellorest/: Makefile  cpprestclient1.cpp  readme.txt  run.sh
hellospark/SimpleApp/: notes.txt  pom.xml  start.sh
hellospark/SimpleApp/src/main/java/: SimpleApp.java
hellotensorflow/: wxtf_mnist.py
hellotrie/: Makefile  cpptrie.cpp
interprocess_hash/: README.md  interprocess_hash.cpp
java/: MapDemo.java
jiraformat/: README.md  action.js  index.html  index.js  package.json
multithread/: CMakeLists.txt  lock.cpp
qsqlite3viewer/: Makefile  README.md  mainwnd.cpp  mainwnd.h  qsqlite3viewer.cpp
simplemake/: README.md  index.html  index.js  main.js  mytool.cpp  package.json
tools/android/: android-intent-flags.py  modify-systrace.py
tools/csvmerge/: csvmerge.java  csvmerge.py
tools/filterlogcat/: .cproject  .project  CMakeLists.txt  filterlogcat.cpp
tools/findfile/: .cproject  .project  CMakeLists.txt  findfile.cpp
txt2img/: .cproject  .project  CMakeLists.txt  Makefile  imageviewer.cpp  imageviewer.hpp  pngwriter_text_to_img.cpp  pngwriter_text_to_img.hpp  text_to_img.hpp  txt2img.cpp  wnd.cpp  wnd.h
ubuntu/: apt.txt
(+10 files in other folders)
